<resources>
    <string name="app_name">TutorLink</string>
    <string name="verified">Verified!</string>
    <string name="scrollable_cards">Scrollable cards</string>
    <string name="appointments">Book appointment</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign Up</string>
    <string name="login">Login/Sign up</string>
    <string name="dut_heal_care">Dut heal-care</string>
    <string name="logo_image">Logo image</string>
    <string name="user_appointments">user appointments</string>
    <string name="your_appointments">Your appointments</string>
    <string name="insights">Insights</string>
    <string name="reminders">Reminders</string>
    <string name="our_doctors">Our Doctors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="comment_on_service">Comment on service</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="login_text">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="book_appointment">Book appointment</string>
    <string name="for_emergency_call_10177_nonly_schedule_for_non_ugernt_appointments">For emergency call 10177.\nOnly schedule for non-ugernt appointments</string>
    <string name="view_history">View history</string>
    <string name="phone_number">Phone number</string>
    <string name="student_number">Student number</string>
    <string name="appointment_history">Appointment history</string>
    <string name="student_no">Student no</string>
    <string name="service">Service</string>
    <string name="reason">Reason</string>
    <string name="symptoms">Symptoms</string>
    <string name="recent_appointment">Recent appointment</string>
    <string name="description">Description</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password_link">Forgot password?</string>
    <string name="change_password">Change password</string>
    <string name="create_new_password">Create new password</string>
    <string name="current_password">Current password</string>
    <string name="verify_password">Verify password</string>
    <string name="you_need_to_verify_that_it_s_you">You need to verify that it\'s you.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_passwordd">New password</string>
    <string name="delete_profile">Delete profile</string>
    <string name="danger_zone">Danger zone</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string-array name="specializations_array">
        <item>Mathematics</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>English</item>
        <item>Accounting</item>
        <item>Economics</item>
        <item>Business Management</item>
        <item>Computer Science</item>
        <item>Information Systems</item>
        <item>Software Engineering</item>
        <item>Statistics</item>
        <item>Programming Fundamentals</item>
        <item>Artificial Intelligence</item>
        <item>Data Structures</item>
    </string-array>

    <string-array name="booking_status_options">
        <item>pending</item>
        <item>confirmed</item>
        <item>completed</item>
        <item>cancelled</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


</resources>