<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".EditProfileActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:background="@drawable/editprofile1"
            android:padding="10dp">

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp"
                android:background="@drawable/edit_text">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Edit Profile"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/dark"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editName"
                    android:background="@drawable/edit_text"
                    android:layout_marginTop="40dp"
                    android:padding="8dp"
                    android:hint="Name"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editEmailText"
                    android:background="@drawable/edit_text"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editStudentNo"
                    android:background="@drawable/edit_text"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/student_number"
                    android:drawableStart="@drawable/number"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>

                <EditText
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editPhoneNo"
                    android:background="@drawable/edit_text"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/phone_number"
                    android:drawableStart="@drawable/phone"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/editUsername"
                    android:background="@drawable/edit_text"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:hint="@string/username"
                    android:drawableStart="@drawable/person"
                    android:drawablePadding="8dp"
                    android:textColor="@color/black"/>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <Button
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:text="Save"
                        android:id="@+id/saveButton"
                        android:textSize="18sp"
                        android:layout_alignParentStart="true"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:text="Cancel"
                        android:id="@+id/cancelButton"
                        android:textSize="18sp"
                        android:backgroundTint="@color/dark"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>