<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">
        <LinearLayout
            android:padding="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_appointment"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/appointmentc"
            android:layout_gravity="end">

        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        android:layout_margin="10dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_emergency_call_10177_nonly_schedule_for_non_ugernt_appointments"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/dark_red"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/select_service"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"/>

            <Spinner
                android:id="@+id/bloodType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/reason_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:hint="Reason for visit"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@drawable/edit_text"
                android:layout_margin="15dp"/>

            <EditText
                android:id="@+id/symptoms_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:hint="Symptoms experienced"
                android:textSize="18sp"
                android:textColor="@color/dark"
                android:background="@drawable/edit_text"
                android:layout_margin="15dp"/>

            <Button
                android:id="@+id/submit_appointment"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="Submit"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>